# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  ast.py  cli.py  diff.py  formats.py  parse_files.py
gendiff/formats/: stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: correct_flat.py  correct_flat_raw_json  correct_flat_raw_json.py  correct_flat_stylish.py  correct_nested.py  correct_nested2.py  correct_nested_plain.py  correct_nested_raw_json  correct_nested_raw_json.py  correct_nested_stylish.py  cut2.json  сut.yaml
