[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["neuroenzo <neuroenzo@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gen_diff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^7.4.4"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
